# Emerald-OS

./: .gitignore  AUTHORS  ChangeLog  Emerald OS.code-workspace  INSTALL  NEWS  README  README.md  bootstrap.sh  configure.ac
src/: Makefile.am  constants.h  emerald.c  error.h  os.h  readconf.c
